--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Favorite place to visit?</title>
+    <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <ul class="menu">
+        <li class="links">About</li>
+        <li class="links">My fav place to visit</li>
+        <li class="links">My fav books</li>
+        <li class="links">My Inspiration</li>
+        <li class="links">Contact</li>
+    </ul>
     <section id="fav place to visit">
- <h1> My Favorite place to visit is Paris</h1>  
-    <img src="https://tse4.mm.bing.net/th?id=OIP.nDE0fRUvBC4ArINl_qytpgHaEN&pid=Api&P=0&w=346&h=198" class="paris">
-    <p> It's my dream to visit Paris and europe for my education. I wanted to go for a long drive during the fall season and want to walk around the night in the Paris. I want to eat freach style food and side by side i also wanted to visit Norway,Spain and Swizerland. Here are some facts about Paris ; Paris is the capital and most populous city of France, with an estimated population of 2,148,271 residents as of 2020, in an area of 105 square kilometres (41 square miles). Since the 17th century, Paris has been one of Europe's major centres of finance, diplomacy, commerce, fashion, science and arts. The City of Paris is the centre and seat of government of the Île-de-France, or Paris Region, which has an estimated official 2020 population of 12,278,210, or about 18 percent of the population of France.The Paris Region had a GDP of €709 billion ($808 billion) in 2017.</p>
+        <h1> My Favorite place to visit is Paris</h1>
+        <img src="https://tse4.mm.bing.net/th?id=OIP.nDE0fRUvBC4ArINl_qytpgHaEN&pid=Api&P=0&w=346&h=198" class="paris">
+        <p> It's my dream to visit Paris and europe for my education. I wanted to go for a long drive during the fall season and want to walk around the night in the Paris. I want to eat freach style food and side by side i also wanted to visit Norway,Spain and Swizerland. Here are some facts about Paris ; Paris is the capital and most populous city of France, with an estimated population of 2,148,271 residents as of 2020, in an area of 105 square kilometres (41 square miles). Since the 17th century, Paris has been one of Europe's major centres of finance, diplomacy, commerce, fashion, science and arts. The City of Paris is the centre and seat of government of the Île-de-France, or Paris Region, which has an estimated official 2020 population of 12,278,210, or about 18 percent of the population of France.The Paris Region had a GDP of €709 billion ($808 billion) in 2017.</p>
+        <section id="My fav books">
+            <h1> My favorite books </h1>
+            <iframe width="900" height="1000" src="https://en.wikipedia.org/wiki/Letters_from_Rifka#Plot" frameborder="0"></iframe>
+        </section>
     </section>
 </body>
-</html>
