--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <ul class="menu">
         <li class="links">About</li>
-        <li class="links">My fav place to visit</li>
-        <li class="links">My fav books</li>
+        <li class="links">My favorite place to visit</li>
+        <li class="links">My favorite books</li>
         <li class="links">My Inspiration</li>
         <li class="links">Contact</li>
     </ul>
@@ -26,5 +26,14 @@
             <h1> My favorite books </h1>
             <iframe width="900" height="1000" src="https://en.wikipedia.org/wiki/Letters_from_Rifka#Plot" frameborder="0"></iframe>
         </section>
+    </section>
+    <section id="Jim Bridenstine">
+        <h1> My Inspiration </h1>
+        <p> James Frederick “Jim” Bridenstine was nominated by President Donald Trump, confirmed by the U.S. Senate, and sworn in as NASA’s 13th administrator on April 23, 2018. Bridenstine was elected in 2012 to represent Oklahoma’s First Congressional District. In Congress he served on the Armed Services Committee and the Science, Space and Technology Committee. Bridenstine’s career in federal service began in the U.S. Navy, flying the E-2C Hawkeye off the USS Abraham Lincoln aircraft carrier. He flew combat missions in Iraq and Afghanistan and accrued most of his 1,900 flight hours and 333 carrier-arrested landings. </p>
+        <span>
+            <a href="https://www.nasa.gov/sites/default/files/styles/side_image/public/thumbnails/image/nhq201907240001.jpg?itok=hxX0Jkfd" target="_blank">
+                <img src="https://tse1.mm.bing.net/th?id=OIP.ZnBmrqAX4kMrPXHFyTufsAHaFV&pid=Api&P=0&w=246&h=178">
+            </a>
+        </span>
     </section>
 </body>
